# numark-ns6-linux

./: .gitignore  README.md
daemon/: CMakeLists.txt  README.md
daemon/src/: audio.c  main.c  ns6.h  protocol.c  usb.c
daemon/udev/: 99-ns6.rules
kmod/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .snd-ns6-audio.ko.cmd  .snd-ns6-audio.mod.cmd  .snd-ns6-audio.mod.o.cmd  .snd-ns6-audio.o.cmd  Makefile  modules.order  snd-ns6-audio.c  snd-ns6-audio.ko  snd-ns6-audio.mod  snd-ns6-audio.mod.c
kmod-total/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .snd-ns6.ko.cmd  .snd-ns6.mod.cmd  .snd-ns6.mod.o.cmd  .snd-ns6.o.cmd  Makefile  modules.order  snd-ns6.c  snd-ns6.ko  snd-ns6.mod  snd-ns6.mod.c
